feat(imagen_paciente) crear endpoint para obtener imagen por nota clinica
